--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Web server for interacting with database endpoints",
   "main": "server.js",
   "scripts": {
+    "build": "tsc",
     "dev:start": "npm run build && nodemon ./build/server.js",
     "start": "npm run build && node ./build/server.js"
   },
