--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "dev:start": "npm run build && nodemon ./build/server.js",
-    "start": "npm run build && node ./build/server.js"
+    "start": "node ./build/server.js"
   },
   "author": "Irfan Ghat",
   "license": "ISC",
